# github-stats-rs

./: .env.sample  .gitignore  Cargo.toml  LICENSE  README.ja.md  README.md  README.zh.md  clippy.toml  justfile
.github/workflows/: generate.yml  test.yml
src/: color.rs  config.rs  env.rs  i18n.rs  icons.rs  image.rs  main.rs  stat.rs
styles/: languages.scss  overview.scss
